# ticker.cash

./: .gitignore  DEPLOY-V12.md  LICENSE  README.md
.github/workflows/: main.yml
contracts/: Oracle.cash  PublisherSlot.cash  TLSNotaryGateway.cash  Ticker.cash  VerifiedAttestation.cash
contracts/artifacts/: Oracle.json  PriceGatedRelease.json  PublisherSlot.json  TLSNotaryGateway.json  Ticker.json  VerifiedAttestation.json
contracts/examples/: PriceGatedRelease.cash
daemon/: package.json  tsconfig.json
daemon/scripts/: bake-installer.ts  deploy-oneshot.ts  deploy.ts  fund-publishers.ts  install-payload.sh  notary.ts  publisher.ts  sweep-v6.ts  ticker  ticker-node.ts
daemon/src/: argv.ts  capture.ts  error-counter.ts  helpers.ts  identity.ts  keys.ts  load-artifacts.ts  manifest.ts  master-seed.ts  notary-stats.ts  operator-key.ts  oracle-update.ts  seed.ts  slot-commit.ts
docs/design/: minimal-slot-principle.md
docs/incidents/: v22-oc-22-quorum-bypass.md
node/: Cargo.toml
node/core/: Cargo.toml
node/core/src/: crypto.rs  http.rs  lib.rs
node/core/src/chain/: consts.rs  digest.rs  mod.rs  oracle_commit.rs  slot_commit.rs  sources.rs  ticker_commit.rs
node/core/src/covenant/: artifacts.rs  mod.rs  redeem.rs
node/core/src/cycle/: env.rs  error.rs  mod.rs  orchestrator.rs  state.rs  step.rs
node/core/src/electrum/: client.rs  mod.rs
node/core/src/identity/: key.rs  manifest.rs  mod.rs  resolve.rs  seed.rs
node/core/src/notary/: mod.rs  server.rs
node/core/src/prover/: extract.rs  http.rs  mod.rs  plain.rs  trait_.rs
node/core/src/stats/: mod.rs
node/core/src/tx/: attest.rs  cashaddr.rs  encode.rs  mod.rs  update.rs
node/daemon/: Cargo.toml
node/daemon/src/: main.rs  notary_handler.rs  real_env.rs  stats_collector.rs
node/ops/src/: deploy.rs  dump.rs  main.rs  p2pkh.rs  send.rs  setup.rs  state.rs
node/systemd/: ticker-node-bundled@.service  ticker-node-pub@.service  ticker-node@.service
scripts/systemd/coordinator/: README.md  migrate.sh  ticker-node-bundled@.service  ticker-node-pub@.service  ticker-web.service  ticker.slice
ticker-node-rs/: .gitignore  Cargo.toml
ticker-node-rs/crates/ticker-core/src/: crypto.rs  lib.rs  logging.rs
ticker-node-rs/crates/ticker-core/src/chain/: digest.rs  mod.rs  oracle_commit.rs
ticker-node-rs/crates/ticker-core/src/covenant/: artifacts.rs  locking.rs  redeem.rs
ticker-node-rs/crates/ticker-core/src/cycle/: env.rs  error.rs  orchestrator.rs  state.rs  step.rs
ticker-node-rs/crates/ticker-core/src/electrum/: client.rs  mod.rs  tls.rs  types.rs
ticker-node-rs/crates/ticker-core/src/identity/: mod.rs  seed.rs
ticker-node-rs/crates/ticker-core/src/notary_server/: http.rs  mod.rs  server.rs  wire.rs
ticker-node-rs/crates/ticker-core/src/prover/: plain.rs  trait_.rs
ticker-node-rs/crates/ticker-core/src/stats_server/: mod.rs
ticker-node-rs/crates/ticker-core/src/tx/: attest.rs  cashaddr.rs  encode.rs  mod.rs  script.rs  sighash.rs  update.rs
web/: docs.html  index.html  package.json  stats.html  tsconfig.json
web/preview/: A-docs.html  A-home.html  B.html  C.html
web/public/: ticker-client.js
web/server/: contracts.json  electrum.ts  operator-stats-poll.ts  oracle-state.ts  protocol.ts  server.ts  stats.ts
