[workspace]
members = ["core", "daemon", "ops"]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
rust-version = "1.79"
license    = "MIT"
repository = "https://github.com/toorik2/ticker.cash"

[workspace.dependencies]
# crypto
secp256k1        = { version = "0.29", default-features = false, features = ["std", "global-context"] }
sha2             = { version = "0.10", default-features = false }
ripemd           = { version = "0.1",  default-features = false }
# TLS
rustls           = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pki-types = "1"
webpki-roots     = "0.26"
# encoding
serde            = { version = "1",    features = ["derive"] }
serde_json       = { version = "1",    default-features = false, features = ["std"] }
hex              = { version = "0.4",  default-features = false, features = ["std"] }
# CLI + errors
pico-args        = "0.5"
thiserror        = "2"

# Workspace crates
ticker-core      = { path = "core" }

[profile.release]
opt-level     = "z"
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
debug         = false
incremental   = false

[profile.release.package."*"]
opt-level = "z"
