[package]
name        = "ticker-core"
description = "ticker.cash protocol: byte layouts, transaction encoding, cycle state machine"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
secp256k1        = { workspace = true }
sha2             = { workspace = true }
ripemd           = { workspace = true }
rustls           = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots     = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
hex              = { workspace = true }
thiserror        = { workspace = true }
