[package]
name        = "ticker-node"
description = "ticker.cash operator daemon (publisher + notary)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[[bin]]
name = "ticker-node"
path = "src/main.rs"

[dependencies]
ticker-core = { workspace = true }
pico-args   = { workspace = true }
serde_json  = { workspace = true }
serde       = { workspace = true }
hex         = { workspace = true }
thiserror   = { workspace = true }
libc        = { workspace = true }
